maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:29: error: not found: value NORTH
  setDirection(NORTH)
               ^