maze.island.IslandMaze.scala.code
override def run() {
  while(!estSurBiscuit()){
    while(getY()>0){
      nord()
    }
    keeHandOnSideWall()
  }
  prendBiscuit()
}

def keeHandOnSideWall(){
  gauche()
  while(estFaceMur()==true){
    droite()
  }
  avance()
}

def nord(){
  if(!estFaceMur()){
    avance()
  }else{
    while(estFaceMur()){
      droite()
    }
    avance()
  }
  setDirection(NORTH)
}